--- a/project-one.html
+++ b/project-one.html
@@ -5,7 +5,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Welcome</h1>
-    <h1>to <br>new<br>world</h1>
+    <h1>Welcome to the world of design</h1>
+
 </body>
 </html>
