--- a/project-one.html
+++ b/project-one.html
@@ -5,7 +5,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Welcome to the world of design</h1>
-
+    <h1 style="color:brown; font-family:Arial, Helvetica, sans-serif">Welcome to the world of design</h1>
+    <h1 style="color:darkmagenta">__/\__</h1>
 </body>
 </html>
