--- a/project-one.html
+++ b/project-one.html
@@ -5,7 +5,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 style="color:blue">Welcome to the world of design</h1>
+    <h1 style="color:pink">Welcome to the world of design</h1>
 
 </body>
 </html>
